--- a/dcayo_Act01_10037/FormContacto.html
+++ b/dcayo_Act01_10037/FormContacto.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Formulario Contacto</title>
+    <title>CONTACTO</title>
     <meta name="viewport" content="width=device-width, user-scaleble=no,
     initial-scale=1, maximum-scale=1,minimum-scale=1">
     <link rel="stylesheet" href="Recursos/MisEstilos.css">
@@ -23,7 +23,6 @@
     </form>
 
     <script src="Recursos/js/validaciones.js"></script>
-    <!--<button><a href="index.html">Regresar</a></button> !-->
 
   </body>
   
