--- a/dcayo_Act01_10037/index.html
+++ b/dcayo_Act01_10037/index.html
@@ -26,7 +26,7 @@
 				<td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td> 
 			  <td> <a href="FormProducto.html">Formulario Producto</a> </td>
                 <td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
-			  <td> <a href="" target="_blank">Matriculas</a> </td>
+			  <td> <a href="#">Matriculas</a> </td>
                 <td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
          </tr>
         </table>
@@ -36,7 +36,7 @@
       <!-- leftMenu (Rectangle) -->
          <div id="leftMenu" class="">
 		    <a href="FormLoginAvanzado.html" class="Boton">LOGIN</a><br><br>
-			<a href="" class="Boton" target="_blank">MATRICULA</a>         
+			<a class="Boton" href="#">MATRICULA</a>         
          </div>
 
 
