--- a/dcayo_Act01_10037/FormLoginAvanzado.html
+++ b/dcayo_Act01_10037/FormLoginAvanzado.html
@@ -11,7 +11,7 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="Recursos/css/estilos.css">
 
-    <title>Formulario Login y Registro de Usuarios</title>
+    <title>LOGIN</title>
 </head>
 <body>
     <div class="contenedor-formularios">
@@ -110,7 +110,6 @@
 
    <script src="Recursos/js/jquery.js"></script>
    <script src="Recursos/js/main.js"></script>
-    <button><a href="index.html">Regresar</a></button>
 
 </body>
 </html>
